--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "Emilien Mottet"
 [params]
   GithubID = "EmilienMottet"
   GitlabId = "EmilienMottet"
-#  TwitterID = "your_twitter"
+ TwitterID = "EmilienMottet"
   LinkedInID = "emilien-mottet-78334611a"
 #  GoogleplusID = "your_googleplus"
 #  FacebookID = "your_facebook"
