--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
-go:
-  - '1.7.1'
+language: go
+
+install:
+  - go get github.com/gohugoio/hugo
+
 env:
   global:
   - SSH_KEY="id_travis"
@@ -10,12 +13,6 @@ env:
   - DEPLOY_BRANCH="source"
 before_install:
   - openssl aes-256-cbc -K $encrypted_b7db4ef157c2_key -iv $encrypted_b7db4ef157c2_iv -in $SSH_KEY.enc -out $SSH_KEY -d
-
-install:
-  - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
-
-before_script:
-  - go get -u -v github.com/spf13/hugo
 
 script:
   - hugo --theme=hugo-theme-nix
