--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ language: go
 install:
   - go get github.com/gohugoio/hugo
 
-env:
-  global:
-  - SSH_KEY="id_travis"
-  - GIT_NAME="Emilien Mottet"
-  - GIT_EMAIL="emilien@emottet.com"
-  - SOURCE_DIR="public"
-  - DEPLOY_BRANCH="source"
-before_install:
-  - openssl aes-256-cbc -K $encrypted_b7db4ef157c2_key -iv $encrypted_b7db4ef157c2_iv -in $SSH_KEY.enc -out $SSH_KEY -d
-
 script:
   - hugo --theme=hugo-theme-nix
 
-after_success:
-  - "./scripts/deploy.sh"
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  email: $GITHUB_EMAIL
+  name: $GITHUB_USERNAME
+  verbose: true
+  keep-history: true
+  local-dir: public
+  target_branch: master  # branch contains blog content
+  on:
+    branch: source  # branch contains Hugo generator code
