--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,8 @@ deploy:
   - mkdir -p ~/.ssh
   - echo "${SSH_HOST_KEY}" > ~/.ssh/known_hosts
   - echo "toto" > test.txt
-  - scp test.txt "${SSH_USER_HOST_LOCATION}" -p 2016 
+  - cat ./test.txt
+  - scp ./test.txt "${SSH_USER_HOST_LOCATION}" -p 2016 
   - rsync -hrvz --delete --exclude=_ -e 'ssh -p 2016' public_html/ "${SSH_USER_HOST_LOCATION}" 
   only:
   - source
