--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,6 @@ deploy:
   - bash -c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
   - mkdir -p ~/.ssh
   - echo "${SSH_HOST_KEY}" > ~/.ssh/known_hosts
-  - rsync -hrvz --delete --exclude=_ -e 'ssh -p 2016' public_html/ "${SSH_USER_HOST_LOCATION}" 
+  - rsync -hrvz --delete --exclude=_ -e 'ssh -p ${SSH_PORT}' public_html/ "${SSH_USER_HOST_LOCATION}" 
   only:
   - source
